# morphfits

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.yaml  default.yaml
data/: README.md  directory_structure copy.yaml  directory_structure.yaml  galfit_feedfile_template.jinja  galwrap_path_names.yaml  path_names.yaml  paths.yaml
data/galfit/: config.yaml  default.constraints  feedfile.jinja  nuker.jinja  sersic.jinja  sersic1.jinja
data/galwrap/: default.constraints  feedfile.jinja  paths.yaml  sample_config.yaml
examples/: config.yaml  settings.yaml
examples/batch_mode/: README.md  settings.yaml
examples/single_ficlo/: README.md  config.yaml  settings.yaml  setup.sh
examples/uncover_run/: README.md  config.yaml
logs/: README.md
scripts/: README.md  rescale.py
src/galwrap/: __init__.py  config.py  galwrap.py  main.py  plot.py
src/galwrap/utils/: __init__.py  filesys.py  log.py  path.py  plot.py  plots.py  utils.py
src/morphfits/: __init__.py  __main__.py  catalog.py  config.py  download.py  initialize.py  input.py  main.py  paths.py  plot.py  plots.py  product.py  products.py  settings.py  settings_old.py
src/morphfits/galwrap/: __init__.py  config.py  main.py  objects.py  paths.py  products.py  setup.py
src/morphfits/utils/: __init__.py  cataloging.py  logs.py  misc.py  path.py  paths.py  plots.py  science.py
tests/: conftest.py  test_catalog.py  test_config.py  test_download.py  test_main.py  test_paths.py  test_plot.py  test_product.py
tests/galwrap/: test_config.py  test_paths.py
tests/test-data/: config.yaml
tests/utils/: test_filesys.py  test_log.py  test_logs.py  test_misc.py  test_path.py  test_science.py  test_utils.py
tests/wrappers/: test_galfit.py
(+3 files in other folders)
