[tool.poetry]
name = "morphfits"
version = "0.2.0"
description = "Get a model from a JWST galaxy or cluster by running morphological fitting wrappers."
authors = [
    "Hansen <hansen@sidratresearch.com>",
    "Lamiya <lmowla@wellesley.edu>",
    "Mubdi <mubdi@sidratresearch.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.13.0"
astropy = "^6.0.1"
matplotlib = "^3.8.4"
tqdm = "^4.66.2"
typer = "^0.12.3"
pydantic = "^2.7.1"
pyyaml = "^6.0.1"
jinja2 = "^3.1.3"
imcascade = "^1.1"
pandas = "^2.2.2"

[tool.poetry.scripts]
morphfits = 'morphfits.__main__:main'

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"
pytest = "^8.1.1"
jupyter = "^1.0.0"
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
